nobase_include_HEADERS =           \
	mstdlib/mstdlib.h              \
	mstdlib/base/m_bin.h           \
	mstdlib/base/m_bincodec.h      \
	mstdlib/base/m_buf.h           \
	mstdlib/base/m_chr.h           \
	mstdlib/base/m_decimal.h       \
	mstdlib/base/m_defs.h          \
	mstdlib/base/m_endian.h        \
	mstdlib/base/m_fmt.h           \
	mstdlib/base/m_fs.h            \
	mstdlib/base/m_getopt.h        \
	mstdlib/base/m_hashtable.h     \
	mstdlib/base/m_hash_dict.h     \
	mstdlib/base/m_hash_strbin.h   \
	mstdlib/base/m_hash_stridx.h   \
	mstdlib/base/m_hash_strvp.h    \
	mstdlib/base/m_hash_u64bin.h   \
	mstdlib/base/m_hash_u64str.h   \
	mstdlib/base/m_hash_u64vp.h    \
	mstdlib/base/m_list.h          \
	mstdlib/base/m_list_bin.h      \
	mstdlib/base/m_list_str.h      \
	mstdlib/base/m_list_u64.h      \
	mstdlib/base/m_llist.h         \
	mstdlib/base/m_llist_bin.h     \
	mstdlib/base/m_llist_str.h     \
	mstdlib/base/m_llist_u64.h     \
	mstdlib/base/m_math.h          \
	mstdlib/base/m_mem.h           \
	mstdlib/base/m_parser.h        \
	mstdlib/base/m_rand.h          \
	mstdlib/base/m_sort.h          \
	mstdlib/base/m_state_machine.h \
	mstdlib/base/m_str.h           \
	mstdlib/base/m_time.h          \
	mstdlib/base/m_types.h         \
	mstdlib/mstdlib_thread.h       \
	mstdlib/thread/m_atomic.h
